--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,8 +5,22 @@
         <title>Blog dla programistów</title>
     </head>
     <body>
-        <p>Witam na stronie bloga</p>
-    
+        <div>
+            <div>
+                {% for post in posts %}
+            </div>
+            <div>
+                <p>Opublikowany: {{post.publish_date}}</p>
+                <h2><a href="">{{post.title}}</a></h2>
+                <em>{{post.text|linebreaksbr}}</em>
+            </div>
+
+            {% comment %}
+            Tutaj lista postów
+            {% endcomment %}
+            
+            {% endfor %}
+        </div>
 
     </body>
 </html>
